made endpoint GET /key/{key} async (it returns requestId)
