# api/swagger.json
@@ -75,7 +75,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/client_interaction.GetKeyResponse"
+                            "$ref": "#/definitions/client_interaction.CommandResponse"
                         }
                     }
                 }
@@ -306,31 +306,6 @@
                 "info": {
                     "$ref": "#/definitions/client_interaction.CommandExecutionInfo"
                 }
-            }
-        },
-        "client_interaction.GetKeyResponse": {
-            "type": "object",
-            "required": [
-                "code",
-                "isLeader",
-                "leaderId",
-                "value"
-            ],
-            "properties": {
-                "code": {
-                    "type": "string",
-                    "enum": [
-                        "success",
-                        "not_found"
-                    ]
-                },
-                "isLeader": {
-                    "type": "boolean"
-                },
-                "leaderId": {
-                    "type": "string"
-                },
-                "value": {}
             }
         },
         "client_interaction.GetLogResponse": {
